--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@
     <link rel="shortcut icon" type="image/png" href="./assets/img/favicon.png" />
 
     <!-- CSS here -->
-    <link rel="stylesheet" href="assets/css/animate.min.css">
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/font-awesome-pro.min.css">
-    <link rel="stylesheet" href="assets/css/flaticon_gerold.css">
-    <link rel="stylesheet" href="assets/css/nice-select.css">
-    <link rel="stylesheet" href="assets/css/backToTop.css">
-    <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
-    <link rel="stylesheet" href="assets/css/odometer-theme-default.css">
-    <link rel="stylesheet" href="assets/css/magnific-popup.css">
+    <link rel="stylesheet" href="animate.min.css">
+    <link rel="stylesheet" href="bootstrap.min.css">
+    <link rel="stylesheet" href="font-awesome-pro.min.css">
+    <link rel="stylesheet" href="flaticon_gerold.css">
+    <link rel="stylesheet" href="nice-select.css">
+    <link rel="stylesheet" href="backToTop.css">
+    <link rel="stylesheet" href="owl.carousel.min.css">
+    <link rel="stylesheet" href="odometer-theme-default.css">
+    <link rel="stylesheet" href="magnific-popup.css">
 
-    <link rel="stylesheet" href="assets/css/main.css">
-    <link rel="stylesheet" href="assets/css/responsive.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="responsive.css">
 </head>
 
 <body>
@@ -1248,22 +1248,23 @@
 
 
     <!-- CSS here -->
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/nice-select.min.js"></script>
-    <script src="assets/js/backToTop.js"></script>
-    <script src="assets/js/smooth-scroll.js"></script>
-    <script src="assets/js/appear.min.js"></script>
-    <script src="assets/js/wow.min.js"></script>
-    <script src="assets/js/gsap.min.js"></script>
-    <script src="assets/js/one-page-nav.js"></script>
-    <script src="assets/js/lightcase.js"></script>
-    <script src="assets/js/owl.carousel.min.js"></script>
-    <script src="assets/js/isotope.pkgd.min.js"></script>
-    <script src="assets/js/odometer.min.js"></script>
-    <script src="assets/js/magnific-popup.js"></script>
+    <script src="jquery.min.js"></script>
+    <script src="bootstrap.bundle.min.js"></script>
+    <script src="nice-select.min.js"></script>
+    <script src="backToTop.js"></script>
+    <script src="smooth-scroll.js"></script>
+    <script src="appear.min.js"></script>
+    <script src="wow.min.js"></script>
+    <script src="gsap.min.js"></script>
+    <script src="one-page-nav.js"></script>
+    <script src="lightcase.js"></script>
+    <script src="owl.carousel.min.js"></script>
+    <script src="isotope.pkgd.min.js"></script>
+    <script src="odometer.min.js"></script>
+    <script src="magnific-popup.js"></script>
 
-    <script src="assets/js/main.js"></script>
+    <script src="main.js"></script>
 </body>
+
 
 </html>
