--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="odometer-theme-default.css">
     <link rel="stylesheet" href="magnific-popup.css">
 
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="responsive.css">
 </head>
 
@@ -1268,3 +1268,4 @@
 
 
 </html>
+
