--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
                     <div class="logo-box">
                         <a href="index.html">
-                            <img src="assets/img/logo/logo.png" alt="">
+                            <img src="KH_PHOTO.jpg" alt="">
                         </a>
                     </div>
 
@@ -115,7 +115,7 @@
 
                     <div class="logo-box">
                         <a href="index.html">
-                            <img src="assets/img/logo/logo.png" alt="">
+                            <img src="KH_PHOTO.jpg" alt="">
                         </a>
                     </div>
 
@@ -193,7 +193,7 @@
                     </div>
                     <div class="col-md-6 d-none d-md-block">
                         <div class="hero-image-box text-center wow fadeInRight" data-wow-delay="1.5s">
-                            <img src="assets/img/hero/me.png" alt="">
+                            <img src="KH_PHOTO.jpg" alt="">
                         </div>
                     </div>
                 </div>
@@ -1268,4 +1268,5 @@
 
 
 </html>
+
 
