--- a/index.html
+++ b/index.html
@@ -1223,7 +1223,7 @@
             <div class="row">
                 <div class="col-md-12 text-center">
                     <div class="footer-logo-box">
-                        <a href="#"><img src="assets/img/logo/logo.png" alt=""></a>
+                        <a href="#"><img src="KH_PHOTO.jpg" alt=""></a>
                     </div>
                     <div class="footer-menu">
                         <nav>
@@ -1268,5 +1268,6 @@
 
 
 </html>
+
 
 
