--- a/index.html
+++ b/index.html
@@ -1222,9 +1222,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12 text-center">
-                    <div class="footer-logo-box">
+                    <!-- <div class="footer-logo-box">
                         <a href="#"><img src="KH_PHOTO.jpg" alt=""></a>
-                    </div>
+                    </div> -->
                     <div class="footer-menu">
                         <nav>
                             <ul>
@@ -1268,6 +1268,7 @@
 
 
 </html>
+
 
 
 
