--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
                     <div class="logo-box">
                         <a href="index.html">
-                            <img src="Khurshed.jpg" alt="" style="border-radius:50%;">
+                            <img src="Khurshed.jpg" alt="" style="border-radius:50%;height:60px;width:60px;">
                         </a>
                     </div>
 
@@ -1268,6 +1268,7 @@
 
 
 </html>
+
 
 
 
