--- a/index.html
+++ b/index.html
@@ -200,27 +200,27 @@
 
                 <div class="funfact-area">
                     <div class="row">
-                        <div class="col-6 col-lg-3">
+                        <div class="col-6 col-lg-4">
                             <div class="funfact-item d-flex flex-column flex-sm-row flex-wrap align-items-center">
-                                <div class="number"><span class="odometer" data-count="14">0</span></div>
+                                <div class="number"><span class="odometer" data-count="1.3">0</span></div>
                                 <div class="text">Years of <br>Experience</div>
                             </div>
                         </div>
-                        <div class="col-6 col-lg-3">
+                        <div class="col-6 col-lg-4">
                             <div class="funfact-item d-flex flex-column flex-sm-row flex-wrap align-items-center">
-                                <div class="number"><span class="odometer" data-count="50">0</span>+</div>
+                                <div class="number"><span class="odometer" data-count="10">0</span>+</div>
                                 <div class="text">Project <br>Completed</div>
                             </div>
                         </div>
-                        <div class="col-6 col-lg-3">
+                        <!-- <div class="col-6 col-lg-3">
                             <div class="funfact-item d-flex flex-column flex-sm-row flex-wrap align-items-center">
                                 <div class="number"><span class="odometer" data-count="1.5">0</span>K</div>
                                 <div class="text">Happy <br>Clients</div>
                             </div>
-                        </div>
-                        <div class="col-6 col-lg-3">
+                        </div> -->
+                        <div class="col-6 col-lg-4">
                             <div class="funfact-item d-flex flex-column flex-sm-row flex-wrap align-items-center">
-                                <div class="number"><span class="odometer" data-count="14">0</span></div>
+                                <div class="number"><span class="odometer" data-count="1.3">0</span></div>
                                 <div class="text">Years of <br>Experience</div>
                             </div>
                         </div>
@@ -1268,6 +1268,7 @@
 
 
 </html>
+
 
 
 
