--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
                     <div class="logo-box">
                         <a href="index.html">
-                            <img src="Khurshed.jpg" alt="">
+                            <img src="Khurshed.jpg" alt=""  style="border-radius:50%;height:60px;width:60px;">
                         </a>
                     </div>
 
@@ -1268,6 +1268,7 @@
 
 
 </html>
+
 
 
 
