--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <title>Khurshed Alam Portfolio</title>
 
     <!-- Place favicon.ico in the root directory -->
-    <link rel="apple-touch-icon" href="./assets/img/favicon.png" />
-    <link rel="shortcut icon" type="image/png" href="./assets/img/favicon.png" />
+    <link rel="apple-touch-icon" href="khurshed.jpg" />
+    <link rel="shortcut icon" type="image/png" href="Khurshed.jpg" />
 
     <!-- CSS here -->
     <link rel="stylesheet" href="animate.min.css">
@@ -1268,6 +1268,7 @@
 
 
 </html>
+
 
 
 
