--- a/index.html
+++ b/index.html
@@ -27,6 +27,14 @@
 
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="responsive.css">
+
+     <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4sE6E6D8KkM5E5p1E6Y3ZkZw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
 </head>
 
 <body>
@@ -1268,6 +1276,7 @@
 
 
 </html>
+
 
 
 
