--- a/index.html
+++ b/index.html
@@ -28,13 +28,7 @@
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="responsive.css">
 
-     <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4sE6E6D8KkM5E5p1E6Y3ZkZw=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 </head>
 
 <body>
@@ -1276,6 +1270,7 @@
 
 
 </html>
+
 
 
 
